--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,67 @@ body{
   background: var(--tg-theme-bg-color);
   color: var(--tg-theme-text-color);
 }
+
+.App {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.App-header {
+  background-color: #282c34;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  padding-bottom: 50px; /* Отступ, чтобы не перекрывать навигацию */
+}
+
+.App-nav {
+  display: flex;
+  justify-content: space-around;
+  background-color: #20232a;
+  padding: 10px 0;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+.App-nav a {
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.App-nav a:hover {
+  text-decoration: underline;
+}
+
+img {
+  margin-top: 20px;
+}
+
+.content-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.melon-image {
+  cursor: pointer;
+  width: 200px;
+  height: auto;
+  margin-top: 20px;
+}
+
+.App {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  width: 100%;
+}
