--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body{
+body {
   background: var(--tg-theme-bg-color);
   color: var(--tg-theme-text-color);
 }
@@ -17,7 +17,7 @@ body{
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #fdd835;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -25,31 +25,45 @@ body{
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-  padding-bottom: 50px; /* Отступ, чтобы не перекрывать навигацию */
+  padding-bottom: 50px;
+}
+
+.username-display {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: #ffffff;
+}
+
+.click-counter {
+  background-color: #ffeb3b;
+  border-radius: 20px;
+  padding: 10px 20px;
+  margin-bottom: 20px;
+  font-size: 18px;
+  color: #000000;
 }
 
 .App-nav {
   display: flex;
   justify-content: space-around;
-  background-color: #20232a;
+  background-color: #d32f2f;
   padding: 10px 0;
   position: fixed;
   bottom: 0;
   width: 100%;
 }
 
-.App-nav a {
+.nav-link {
   color: white;
   text-decoration: none;
   font-size: 18px;
+  padding: 10px;
+  border-radius: 10px;
 }
 
-.App-nav a:hover {
-  text-decoration: underline;
-}
-
-img {
-  margin-top: 20px;
+.nav-link:hover {
+  background-color: #b71c1c;
 }
 
 .content-center {
@@ -63,12 +77,18 @@ img {
   width: 200px;
   height: auto;
   margin-top: 20px;
+  transition: transform 0.3s ease; /* Уменьшение времени анимации до 0.3s */
+  outline: none;
+  border: none;
+  -webkit-tap-highlight-color: transparent; /* Для мобильных браузеров */
 }
 
-.App {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  width: 100%;
+.melon-image.clicked {
+  transform: scale(1.1);
+}
+
+.melon-image:focus, .melon-image:active {
+  outline: none;
+  box-shadow: none;
+  border: none;
 }
